# Envizo-Enterprise-LLM

./: .gitignore  DEPLOYMENT_CRITICAL.txt  DEPLOYMENT_INSTRUCTIONS.md  LICENSE  README.md  app.py  config.py  database.py  deploy.sh  deployment-config.sh  main.py  models.py  pyproject.toml  replit.nix  schemas.py  seed_data.py  start_server.py  utils.py  wsgi.py
api/: router.py
api/endpoints/: analytics.py  fine_tuning.py  focal_bi.py  llm.py  openapi.py  system.py  users.py
auth/: __init__.py  permissions.py  users.py
llm/: __init__.py  fine_tuning.py  inference.py  load_balancer.py  semantic_cache.py
static/css/: custom.css
static/js/: admin.js  analytics.js  main.js  old-wise-one.js
templates/: admin.html  analytics.html  api_keys.html  base.html  error.html  fine_tuning.html  index.html  login.html  user_management.html
