[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "api>=0.0.7",
    "datasetrising>=1.0.4",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "numpy>=2.2.4",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.11.3",
    "python-jose[cryptography]>=3.4.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.2",
    "starlette>=0.46.1",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "python-multipart>=0.0.20",
    "flask-login>=0.6.3",
    "werkzeug>=3.1.3",
    "anthropic>=0.49.0",
    "flask-wtf>=1.2.2",
]
